# edr-agent

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  agent.integration.toml  agent.toml  agent.toml.example  edr_queue.integration.db  fix_queue.py  fix_queue_full.py  fix_transport.py  vcpkg.json
.github/workflows/: edr-agent-build-grpc-ort.yml  edr-agent-ci.yml  edr-agent-client-build.yml  edr-agent-client-release.yml
build-ir/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  edr_agent  edr_monitor  edr_p0_golden_test
build-ir/edr_config/: p0_rule_bundle_ir_v1.json
build-obs/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  edr_agent  edr_monitor
build_agent_check/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  edr_agent  edr_monitor  edr_p0_golden_test  test_event_bus_mpmc_stress
build_check/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  edr_agent  edr_monitor
build_darwin/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  edr_agent  edr_monitor  edr_p0_golden_test  test_event_bus_mpmc_stress
build_darwin/edr_config/: p0_rule_bundle_ir_v1.json  p0_rule_bundle_manifest.json
build_embed_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  edr_agent
build_h/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  edr_agent  edr_monitor  edr_p0_golden_test  test_event_bus_mpmc_stress
build_h2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  edr_agent  edr_monitor
build_judge/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  edr_agent  edr_monitor
build_judge/edr_config/: p0_rule_bundle_manifest.json
build_local_verify/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  edr_agent
build_mon/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  edr_monitor
build_nogrpc/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  edr_agent  edr_monitor
build_p0_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  edr_agent  edr_monitor
build_p0full/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_p0g/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  edr_agent  edr_monitor  edr_p0_golden_test
build_p0test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  edr_agent  edr_p0_golden_test
cmake/: FindProtobufC.cmake  mingw-w64-x86_64.cmake
config/: agent_preprocess_rules_client_smoke_test.toml  agent_preprocess_rules_v1.toml  agent_preprocess_rules_v1_Demo_Tenant.toml  agent_profile_events_only.example.toml  p0_rule_bundle_ir_v1.json  p0_rule_bundle_ir_v1.json.enc  p0_rule_bundle_ir_v1_Demo_Tenant.json.enc  p0_rule_bundle_ir_v1_demo-tenant.json.enc  p0_rule_bundle_manifest.json  p0_rule_ids_v1.txt
config/profiles/: README.md  collection_minimal_bus_pressure.example.toml  wp2_lab_e2e.env.example  wp2_prod_default.env.example  wp8_compliance_baseline.env.example  wp9_behavior_ave.env.example
deploy/: README.md
docker/: Dockerfile  docker-compose.yml
docs/: ADR-0009-T-009-fl-aggregate-to-model-version.md  AGENT_INSTALLER.md  AGENT_THREAD_MODEL.md  AGT004_API_MONITOR_DESCope.md  AGT009_FORENSIC_UPLOAD_E2E.md  AGT012_LINUX_EBPF_P7.md  ATTACK_SURFACE_DESIGN_ALIGNMENT.md  ATTACK_SURFACE_GRPC.md  AVE_COMPLETENESS_TASKS.md  AVE_ENGINE_IMPLEMENTATION_PLAN.md  AVE_ONNX_CONTRACT.md  AVE_ONNX_LOCAL_STACK.md  AVE_P3_TRACEABILITY.md  AVE_PACKAGING_P4.md  AVE_PLATFORM_FRONTEND.md  AVE_RD_ROADMAP.md  BEHAVIOR_DIM_BCD_AUDIT_AG012.md  BEHAVIOR_E_GROUP_FEED_AG020.md  BEHAVIOR_GATES_AG013.md  BEHAVIOR_ONNX_IMPLEMENTATION_PLAN.md  BEHAVIOR_ONNX_SPEC_GAP.md  BEHAVIOR_PROTO_DESIGN_MAPPING.md  CLIENT_IMPROVEMENT_TASKS.md  CONFIGURATION_GUIDE.md  DETAILED_TASK_CHECKLIST.md  EDR_AGENT_ARCHITECTURE.md  EDR_EVENT_PATH_SCALING_IMPL_PLAN.md  EDR_EVENT_PATH_SCALING_IMPL_SUMMARY.md  EDR_P0_DIRECT_EMIT_E2E.md  EDR_TDH_A2_REGRESSION.md  ETW_DATA_FLOW_ANALYSIS.md  EVENT_VOLUME_ANALYSIS.md  EVIDENCE_B24_CHECKLIST.md  FL_BUILD_AND_CI.md  FL_DEVELOPMENT_PLAN.md  FL_GRADIENT_PROTO_CONTRACT_AG031.md  FL_JOINT_DEBUG_CHECKLIST.md  FL_P1_CONSOLE_AND_RUNBOOK.md  FL_ROUND_TRAINING_SEMANTICS.md  FL_SAMPLES_SCHEMA.md  (+33 more)
fixtures/tdh/: etw1_kernel_process_pimg_v1.golden  kernel_file_prop_try_v1.txt  kernel_process_prop_try_v1.txt  userdata_medium_p3_v2.hex  userdata_synth_p3_v1.hex
include/edr/: agent.h  agent_update.h  attack_surface_egress.h  attack_surface_report.h  attack_surface_win_util.h  ave.h  ave_behavior_features.h  ave_behavior_gates.h  ave_cross_engine_feed.h  ave_sdk.h  ave_stats.h  behavior_alert_emit.h  behavior_from_slot.h  behavior_proto.h  behavior_proto_c.h  behavior_record.h  behavior_wire.h  (+51 more)
models/: README.txt  pca_mean.npy
onnx-output/: README.md  static.onnx
scripts/: agent_smoke.sh  ave_e2e_release_smoke.sh  ave_hotfix_release_smoke.sh  backup_sources_to_tmp.sh  behavior_encode_m3b.py  behavior_proto_c_pack.c.in  benchmark_performance.sh  build_linux_native_docker.sh  build_windows_mingw.sh  build_windows_mingw_docker.sh  check_behavior_onnx_contract.sh  check_edr_config.sh  ci_build.sh  cmake_fl_stack.sh  edr_agent_install.ps1  edr_agent_install.py  edr_agent_install.sh  edr_env_template.ps1  edr_env_template.sh  edr_platform_stack_smoke.cmd  edr_platform_stack_smoke.ps1  encrypt_p0_rules.py  etw_observability_baseline.sh  gen_attack_surface_proto_cpp.sh  gen_behavior_seq128_dual_onnx.py  gen_fl_proto.sh  gen_minimal_behavior_dual_onnx.py  gen_minimal_static_triple_onnx.py  gen_p0_golden_vectors_inc.py  gen_p0_rule_ir_embed.py  import_samples_to_db.py  install-cmake-macos.sh  install_static_onnx.sh  onnx_local_stack_smoke.sh  qa_smoke_stats_by_10m_ip.sql  qa_smoke_stats_export.cmd  qa_smoke_stats_export.ps1  qa_smoke_stats_export.sh  qa_smoke_traces_endpoint_events.sql  regen_event_proto.sh  (+26 more)
src/: main.c
test/: p0_extended_test.c  p0_rule_perf_test.c
tests/: test_event_bus_mpmc_stress.c
tools/: edr_monitor.c
(+154 files in other folders)
